--- a/spatial-bargaining/src/components/sidebar/sidebar.css
+++ b/spatial-bargaining/src/components/sidebar/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar{
     flex: 1;
     height:100vh;
-    background-color: ghostwhite;
+    //background-color: ghostwhite;
     position: sticky;
     top: 50px;
 }
